--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "heroku-prebuild": "cd cinema-now-server && npm install",
-    "start": "cd cinema-now-server && npm start"
+    "heroku-prebuild": "cd cinema-now-server && npm install && cd \"..\" && cd cinema-now-client && npm install && npm run build && echo \"pre-build done\"",
+    "start": "cd cinema-now-server && npm start",
+    "copy-cilent-dist-to-server": "cd cinema-now-client && copyfiles -u 1 -a \"./dist/cinema-now-client/**\" \"../cinema-now-server/dist/cinema-now-client\" && echo \"dist copied\"",
+    "postinstall": "npm run copy-cilent-dist-to-server"
+  },
+  "devDependencies": {
+    "copyfiles": "^2.4.1"
   }
 }
