--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "heroku-prebuild": "cd cinema-now-server && npm install && cd \"..\" && cd cinema-now-client && npm install && npm run build && echo \"pre-build done\"",
     "start": "cd cinema-now-server && npm start",
-    "copy-cilent-dist-to-server": "cd cinema-now-client && copyfiles -u 1 -a \"./dist/cinema-now-client/**\" \"../cinema-now-server/dist/cinema-now-client\" && echo \"dist copied\"",
+    "copy-cilent-dist-to-server": "cd cinema-now-client && copyfiles -a \"./dist/cinema-now-client/**\" \"../cinema-now-server\" && echo \"dist copied\"",
     "postinstall": "npm run copy-cilent-dist-to-server"
   },
   "devDependencies": {
