--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "heroku-prebuild": "cd cinema-now-server && npm install && cd \"..\" && cd \"cinema-now-client\" && npm install && npm run build && npm link @angular/cli && echo \"pre-build done\"",
+    "heroku-prebuild": "cd cinema-now-server && npm install && cd \"..\" && cd \"cinema-now-client\" && npm install && npm link @angular/cli && npm run build && echo \"pre-build done\"",
     "start": "cd cinema-now-server && npm start",
     "copy-cilent-dist-to-server": "cd \"/cinema-now-client\" && copyfiles -a \"./dist/cinema-now-client/**\" \"../cinema-now-server\" && echo \"dist copied\"",
     "postinstall": "npm run copy-cilent-dist-to-server"
