--- a/cinema-now-server/package.json
+++ b/cinema-now-server/package.json
@@ -22,5 +22,8 @@
   "devDependencies": {
     "node-env-run": "^4.0.2",
     "nodemon": "^2.0.7"
+  },
+  "engines": {
+    "node": "14.16.0"
   }
 }
